--- a/vehiculos/src/main/resources/application.properties
+++ b/vehiculos/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=vehiculos
 
 server.port=8080
 
-spring.data.mongodb.uri=mongodb+srv://andresmiranda_db_user:vehiculos123@vehiculos.izp4izz.mongodb.net/?retryWrites=true&w=majority&appName=vehiculos
-spring.data.mongodb.database=vehiculos
+spring.data.mongodb.uri=mongodb+srv://andresestrada0630_db_user:prestamosDeportivos@prestamos.aygd11w.mongodb.net/?retryWrites=true&w=majority&appName=prestamos
+spring.data.mongodb.database=prestamos
